// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dialog with instructions to connect to database 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  min-height: 240px;
  flex: 0 0 auto;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  background-color: #010B1C;
  color: #FFFFFF;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c17 {
  box-sizing: border-box;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: #FFFFFF;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c18 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
  flex: 0 0 auto;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.main"
        >
          Connect To Database
        </div>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          <span
            class="c11"
          >
            Step 1
          </span>
           - Login to Teleport
          <div
            class="c12 c13"
            color="light"
          >
            <div
              class="c14 c8"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c15"
                style="user-select: none;"
              >
                $
              </div>
              <div>
                tsh login --proxy=localhost:443 --auth=local --user=yassine im-a-cluster
              </div>
            </div>
            <button
              class="c16"
              fill="filled"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c10"
        >
          <span
            class="c11"
          >
            Step 2
          </span>
           - Connect to the database
          <div
            class="c12 c13"
            color="light"
          >
            <div
              class="c14 c8"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c15"
                style="user-select: none;"
              >
                $
              </div>
              <div>
                tsh db connect aurora --db-user=&lt;user&gt; --db-name=&lt;name&gt;
              </div>
            </div>
            <button
              class="c16"
              fill="filled"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c17"
        >
          * Note: To connect with a GUI database client, see our 
          <a
            class="c18"
            href="https://goteleport.com/docs/database-access/guides/gui-clients/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
           for instructions.
        </div>
      </div>
      <div
        class="c17"
      >
        <button
          class="c19"
          fill="filled"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render dialog with instructions to connect to database with requestId 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  min-height: 240px;
  flex: 0 0 auto;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  background-color: #010B1C;
  color: #FFFFFF;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c17 {
  box-sizing: border-box;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: #FFFFFF;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c18 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
  flex: 0 0 auto;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4 c5"
        >
          <div
            class="c6"
            color="text.main"
          >
            Connect To Database
          </div>
        </div>
        <div
          class="c7 c8 c9"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c12 c13"
              color="light"
            >
              <div
                class="c14 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=yassine im-a-cluster --request-id=e1e8072c-1eb8-5df4-a7bd-b6863b19271c
                </div>
              </div>
              <button
                class="c16"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Step 2
            </span>
             - Connect to the database
            <div
              class="c12 c13"
              color="light"
            >
              <div
                class="c14 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh db connect aurora --db-user=&lt;user&gt; --db-name=&lt;name&gt;
                </div>
              </div>
              <button
                class="c16"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Step 3 (Optional)
            </span>
             - When finished, drop the assumed role
            <div
              class="c12 c13"
              color="light"
            >
              <div
                class="c14 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh request drop
                </div>
              </div>
              <button
                class="c16"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c17"
          >
            * Note: To connect with a GUI database client, see our 
            <a
              class="c18"
              href="https://goteleport.com/docs/database-access/guides/gui-clients/"
              rel="noreferrer"
              target="_blank"
            >
              documentation
            </a>
             for instructions.
          </div>
        </div>
        <div
          class="c17"
        >
          <button
            class="c19"
            fill="filled"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
